BROKEN BUILD: further fixed to classes like Matrix, which is now RuntimeMatrix/MatrixTypeNode/MatrixLike interface -> Scalar moves with same logic to Double (support Java trig under the hood) and Integer, each implement sealed interface. Whole project moving to be more type safe using sealed interfaces, final classes